// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailPageCard tests Render custom content type 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card main"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
      style="font-size: 16px; font-weight: 600;"
    >
      overview
    </p>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main detailsSectionRowWrapper"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="font-size: 12px;"
        >
          Icon
        </p>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="library"
        >
          <svg
            fill="none"
            height="16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M2 11.393c0 .32-.178.57-.396.57H.396c-.216 0-.396-.255-.396-.57V.607c0-.32.178-.57.396-.57h1.208c.216 0 .396.255.396.57v10.786zm2.967.57c.218 0 .396-.25.396-.57V.608c0-.315-.18-.57-.396-.57H3.759c-.218 0-.396.25-.396.57v10.786c0 .315.18.57.396.57h1.208zm4.491.019l.847-.252a.564.564 0 00.391-.696L7.94.614a.56.56 0 00-.682-.403L6.41.462a.564.564 0 00-.391.696l2.755 10.42c.082.303.39.482.683.404z"
              fill="#fff"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="StyledProps--font StyledProps--main detailsSectionRowWrapper"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="font-size: 12px;"
        >
          triggers.pipelineExecutionInput
        </p>
        <pre>
          code
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailPageCard tests Render hideOnUndefinedValue content type only when applicable 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card main"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
      style="font-size: 16px; font-weight: 600;"
    >
      overview
    </p>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main detailsSectionRowWrapper"
      >
        <p
          class="StyledProps--font StyledProps--main"
          style="font-size: 12px;"
        >
          Code
        </p>
        <pre>
          code
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailPageCard tests Render text content type 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card main"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
      style="font-size: 16px; font-weight: 600;"
    >
      overview
    </p>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main detailsSectionRowWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-size: 12px;"
          >
            triggers.triggerConfigurationPanel.triggerName
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1; width: 424px;"
          >
            name
          </p>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main detailsSectionRowWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-size: 12px;"
          >
            description
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1; width: 424px;"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main detailsSectionRowWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-size: 12px;"
          >
            identifier
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1; width: 424px;"
          >
            identifier
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
